# quantum-katas

./: pyproject.toml
.config/: dotnet-tools.json
